--- a/components/Homepage/Header/header.module.css
+++ b/components/Homepage/Header/header.module.css
@@ -2,6 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  z-index: 20;
+  height: 50px;
 }
 
 .header nav ul {
@@ -72,6 +79,7 @@
     color: #fff;
     text-align: center;
     font-weight: 500;
+    /* font-size: 1.2rem; */
   }
 
   .navbar span {
@@ -103,5 +111,6 @@
     margin: 0.5rem;
     display: flex;
     gap: 0.8rem;
+    font-size: 1.6rem;
   }
 }
