--- a/components/ProductPage/product.module.css
+++ b/components/ProductPage/product.module.css
@@ -1,4 +1,5 @@
 .header {
+  margin: 5rem 0;
   display: flex;
   width: 100%;
   align-items: center;
@@ -134,14 +135,14 @@
 .image {
   width: 40%;
   padding: 1rem;
-  border: 1px solid #333;
+  /* border: 1px solid #333; */
 }
 .image img {
   width: 100%;
 }
 .description {
   width: 60%;
-  border: 1px solid #333;
+  /* border: 1px solid #333; */
   padding: 1rem;
 }
 .description h1 {
