--- a/components/payment/payment.module.css
+++ b/components/payment/payment.module.css
@@ -34,6 +34,10 @@
   font-weight: bold;
   font-size: 1.1rem;
   border-radius: 0.4rem;
+  transition: transform 0.2s ease-in;
+}
+.form button:active {
+  transform: scale(0.5);
 }
 @media (max-width: 850px) {
   .payment {
