--- a/components/Homepage/Display/display.module.css
+++ b/components/Homepage/Display/display.module.css
@@ -4,29 +4,68 @@
   gap: 1rem;
   width: 100%;
 }
-.image {
-  width: 30%;
+.image,
+.image1,
+.image2,
+.image3,
+.image4,
+.image5 {
+  width: 25%;
 }
 .image1 img {
-  width: 358px;
+  width: 100%;
   height: 332px;
 }
+/* .imagecontainer {
+  animation: slide 3s ease-in infinite;
+} */
+@keyframes slide {
+  0% {
+    transform: translateX(-8rem);
+  }
+  25% {
+    transform: translateX(-4rem);
+  }
+  75% {
+    transform: translateX(0rem);
+  }
+  100% {
+    transform: translateX(4rem);
+  }
+}
+@keyframes slides {
+  0% {
+    transform: translateX(16rem);
+  }
+  25% {
+    transform: translateX(-8rem);
+  }
+  75% {
+    transform: translateX(0rem);
+  }
+  100% {
+    transform: translateX(-8rem);
+  }
+}
 .image2 img {
-  width: 358px;
+  width: 100%;
   height: 428px;
+  animation: slide 3s ease-in infinite;
 }
 
 .image3 img {
-  width: 358px;
+  width: 100%;
   height: 444px;
+  animation: slides 3s ease-in infinite;
 }
 
 .image4 img {
-  width: 358px;
+  width: 100%;
   height: 428px;
+  animation: slide 3s ease-in infinite;
 }
 .image5 img {
-  width: 358px;
+  width: 100%;
   height: 428px;
 }
 .smallScreen {
