--- a/components/cart/cart.module.css
+++ b/components/cart/cart.module.css
@@ -70,6 +70,9 @@
   flex-direction: column;
   gap: 1rem;
 }
+.proceed {
+  transition: transform 0.2s ease-in;
+}
 .proceed a {
   background: #3341c1;
   border-radius: 4px;
@@ -80,6 +83,9 @@
   line-height: 43px;
   letter-spacing: 0em;
   text-align: center;
+}
+.proceed:active {
+  transform: scale(0.5);
 }
 .shop {
   text-decoration-line: underline;
