--- a/components/Homepage/Display/display.module.css
+++ b/components/Homepage/Display/display.module.css
@@ -19,7 +19,7 @@
 /* .imagecontainer {
   animation: slide 3s ease-in infinite;
 } */
-@keyframes slide {
+/* @keyframes slide {
   0% {
     transform: translateX(-8rem);
   }
@@ -32,8 +32,8 @@
   100% {
     transform: translateX(4rem);
   }
-}
-@keyframes slides {
+} */
+/* @keyframes slides {
   0% {
     transform: translateX(16rem);
   }
@@ -46,7 +46,7 @@
   100% {
     transform: translateX(-8rem);
   }
-}
+} */
 .image2 img {
   width: 100%;
   height: 428px;
