--- a/components/Homepage/Header/header.module.css
+++ b/components/Homepage/Header/header.module.css
@@ -9,6 +9,7 @@
   background: #fff;
   z-index: 20;
   height: 50px;
+  box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.25);
 }
 
 .header nav ul {
@@ -67,13 +68,13 @@
   }
   .navbar {
     display: block;
-    background: #1f1f1f;
-    opacity: 0.95;
+    background: #fff;
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100vh;
+    width: 50%;
+    height: 500px;
+    /* height: 100vh; */
     display: flex;
     text-align: center;
     align-items: center;
@@ -83,17 +84,29 @@
   .navbar ul {
     display: flex;
     flex-direction: column;
+    text-align: center;
+
     gap: 2rem;
     opacity: 1;
     width: 100%;
   }
   .navbar ul li {
-    color: #fff;
-    text-align: center;
+    color: #000;
+    text-align: start;
     font-weight: 500;
-    /* font-size: 1.2rem; */
+    font-size: 1.2rem;
+    transition: all 0.2s ease-in;
   }
-
+  .navbar ul li:hover {
+    text-decoration: underline;
+  }
+  .navbar ul li:active {
+    transform: scale(0.8);
+  }
+  .navbar hr {
+    width: 80%;
+    margin: 0 auto;
+  }
   .navbar span {
     position: absolute;
     top: 0;
