--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,12 @@ ul {
 .center a:active {
   transform: scale(0.5);
 }
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+}
