--- a/components/Homepage/Display/display.module.css
+++ b/components/Homepage/Display/display.module.css
@@ -1,8 +1,9 @@
 .container {
   display: flex;
-  /* flex-wrap: wrap; */
+
   gap: 1rem;
-  width: 100%;
+  width: 80%;
+  margin: auto;
 }
 .image,
 .image1,
