--- a/components/Homepage/Display/display.module.css
+++ b/components/Homepage/Display/display.module.css
@@ -16,6 +16,7 @@
 .image1 img {
   width: 100%;
   height: 332px;
+  object-fit: cover;
 }
 /* .imagecontainer {
   animation: slide 3s ease-in infinite;
@@ -52,22 +53,26 @@
   width: 100%;
   height: 428px;
   animation: slide 3s ease-in infinite;
+  object-fit: cover;
 }
 
 .image3 img {
   width: 100%;
   height: 444px;
   animation: slides 3s ease-in infinite;
+  object-fit: cover;
 }
 
 .image4 img {
   width: 100%;
   height: 428px;
   animation: slide 3s ease-in infinite;
+  object-fit: cover;
 }
 .image5 img {
   width: 100%;
   height: 428px;
+  object-fit: cover;
 }
 .smallScreen {
   display: none;
@@ -83,43 +88,46 @@
     margin: 3rem auto;
     width: 80%;
     position: relative;
+    box-shadow: 4px 4px 64px rgba(0, 0, 0, 0.4);
   }
   .smallScreen img {
     width: 100%;
+    object-fit: cover;
   }
   .image1 {
     position: absolute;
     width: 200px;
     height: 200px;
     margin: auto;
-    transform: rotate(5deg);
+    transform: rotate(0deg);
+    /* z-index: 10; */
   }
   .image2 {
     position: absolute;
     width: 200px;
     height: 200px;
     margin: auto;
-    transform: rotate(-5deg);
+    transform: rotate(2deg);
   }
   .image3 {
     position: absolute;
     width: 200px;
     margin: auto;
     height: 200px;
-    transform: rotate(10deg);
+    transform: rotate(4deg);
   }
   .image4 {
     position: absolute;
     width: 200px;
     margin: auto;
     height: 200px;
-    transform: rotate(-10deg);
+    transform: rotate(6deg);
   }
   .image5 {
     position: absolute;
     width: 200px;
     margin: auto;
     height: 200px;
-    transform: rotate(0deg);
+    transform: rotate(8deg);
   }
 }
