--- a/components/Homepage/auction/auction.module.css
+++ b/components/Homepage/auction/auction.module.css
@@ -26,12 +26,13 @@
 .image img {
   width: 100%;
   height: 400px;
+  object-fit: cover;
 }
 .black {
   position: absolute;
-  top: 15%;
+  top: 0;
   background: rgba(0, 0, 0, 0.7);
-  height: 340px;
+  height: 400px;
   width: 100%;
   z-index: 20;
 }
