--- a/components/Homepage/featured/featured.module.css
+++ b/components/Homepage/featured/featured.module.css
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
   width: 100%;
   position: relative;
 }
@@ -23,8 +23,9 @@
   width: 50%;
 }
 .image img {
-  width: 610px;
+  width: 100%;
   height: 400px;
+  object-fit: cover;
 }
 .content {
   width: 50%;
@@ -56,6 +57,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .creators img:nth-child(2) {
   width: 50px;
@@ -63,6 +65,7 @@
   border-radius: 50%;
   margin-left: -1.6rem;
   z-index: 1;
+  object-fit: cover;
 }
 .creators img:nth-child(3) {
   width: 50px;
@@ -70,6 +73,7 @@
   border-radius: 50%;
   margin-left: -1.6rem;
   z-index: 2;
+  object-fit: cover;
 }
 .creators img:nth-child(4) {
   width: 50px;
@@ -77,6 +81,7 @@
   border-radius: 50%;
   margin-left: -1.6rem;
   z-index: 3;
+  object-fit: cover;
 }
 .creators img:nth-child(5) {
   width: 50px;
@@ -84,6 +89,7 @@
   border-radius: 50%;
   margin-left: -1.6rem;
   z-index: 4;
+  object-fit: cover;
 }
 .arrow {
   position: absolute;
@@ -129,6 +135,7 @@
   }
   .image img {
     width: 100%;
+    object-fit: cover;
   }
   .content {
     width: 100%;
