--- a/components/auctionPage/auction.module.css
+++ b/components/auctionPage/auction.module.css
@@ -27,6 +27,7 @@
 .auction img {
   width: 100%;
   height: 300px;
+  object-fit: cover;
 }
 .time {
   background: rgba(255, 255, 255, 0.2);
@@ -85,6 +86,7 @@
 .detail img {
   width: 100%;
   height: 300px;
+  object-fit: cover;
 }
 .detail span {
   /* padding: 1rem; */
@@ -170,6 +172,7 @@
 .livebid .image img {
   width: 100%;
   height: 500px;
+  object-fit: cover;
 }
 .current {
   position: absolute;
@@ -240,6 +243,7 @@
   width: 100%;
   height: 50px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .view {
   overflow: scroll;
@@ -346,6 +350,7 @@
   }
   .livebid .image img {
     height: 600px;
+    object-fit: cover;
   }
   .black {
     height: 600px;
