--- a/components/Homepage/auction/auction.module.css
+++ b/components/Homepage/auction/auction.module.css
@@ -25,14 +25,14 @@
 }
 .image img {
   width: 100%;
-  height: 400px;
+  height: 300px;
   object-fit: cover;
 }
 .black {
   position: absolute;
   top: 0;
   background: rgba(0, 0, 0, 0.7);
-  height: 400px;
+  height: 300px;
   width: 100%;
   z-index: 20;
 }
@@ -46,7 +46,7 @@
   color: #fff;
   font-size: 2.4rem;
   width: 80%;
-  margin: auto;
+  margin: 1rem auto;
   text-transform: capitalize;
 }
 .body {
