--- a/components/ProductPage/product.module.css
+++ b/components/ProductPage/product.module.css
@@ -12,6 +12,15 @@
   padding: 1rem;
   border-radius: 1rem;
 }
+.section {
+  margin: 5rem 0;
+  width: 100%;
+}
+.section h1 {
+  font-size: 1.3rem;
+  color: #333;
+  text-align: center;
+}
 .sort {
   background: #ffffff;
   box-shadow: 4px 4px 64px rgba(0, 0, 0, 0.1);
@@ -231,6 +240,7 @@
   text-align: left;
   border: 1px solid #292929;
   border-radius: 0.3rem;
+  color: red;
 }
 .desc {
   margin: 0;
